ckad/pod-definition-label-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-podd

spec:
  containers:
    - name: data-processor
      image: data-processor
  nodeSelector:
    size: Large


#after you needd to put labels in your nodes as:
#kubectl label nodes <node-name> <label-key>=<label-value>
#kubectl label nodes node-1 size=large
