ckad/pod-definition-restart-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: math-pod
spec:
  containers:
    - name: math-add
      image: ubuntu
      command: ['expr','3','+','2']

  restartPolicy: Never #Default is always
