ckad/volumes-and-mounts-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: randon-number-generator
spec:
  containers:
     - image: alpine
       name: alpine
       command: ["/bin/sh", "-c"]
       args: ["shuff -i 0-100 -n >> /opt/number.out;"]
       volumeMounts:
         - mountPath: /opt
           name: data-volume
  volumes:
    - name: data-volume
      hostPath:
        path: /data
        type: directory
