ckad/cluster-ip-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

  selector:
    #Put the PODs label section here
    app: my-backend-app
    type: back-end
